# bazel-tests

./: BUILD.bazel  MODULE.bazel  requirements.in  requirements_lock_3_10.txt
python/corpdevx/scripts/: BUILD.bazel  main.py
python/shared/cellar/: BUILD.bazel  lib.py
tools/linter/: BUILD.bazel  defs.bzl  linter.sh
